--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+    background: linear-gradient(180deg, rgb(77, 17, 205), rgb(251, 56, 56));
     display: flex;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     height: 100vh;
@@ -16,13 +16,13 @@ body {
   }
   
   button {
-    border-radius: 8px;
+    border-radius: 4px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: #d95757;
     cursor: pointer;
     transition: border-color 0.25s;
     color: white;
@@ -43,9 +43,9 @@ body {
     display: flex;
     flex-direction: column;
     margin: 8px 0;
-    border: 1px solid black;
+    border: 1px solid rgb(162, 162, 162);
     gap: 1px;
-    background-color: black;
+    background-color: rgb(164, 164, 164);
     border-radius: 8px;
     overflow: auto;
   }
